# neural-accessibility-lab

./: README.md  pyproject.toml
data/: oil.data
src/nal/: __init__.py  datasets.py  experiments.py  metrics.py  models.py  plotting.py
src/neural_accessibility_lab/: __init__.py  datasets.py  experiments.py  models.py  plotting.py  registry.py  result.py
src/neural_accessibility_lab/analyses/: __init__.py  checkpoint.py  dashboard.py  lag.py  phase_portraits.py
src/neural_accessibility_lab/metrics/: __init__.py  accessibility.py  drift.py  hellinger.py  representation.py
tests/: test_experiments.py
