[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-accessibility-lab"
version = "0.1.1"
description = "Notebook-friendly experiment harness for neural-network accessibility dynamics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]
dev = [
    "pytest",
]
all = [
    "neural-accessibility-lab[ml,dev]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neural_accessibility_lab = ["data/oil.data"]
